# tenderapi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
tenderapi_mcp/: __init__.py  server.py
